fix(p4): overflow hidden

--- a/P4/style.css
+++ b/P4/style.css
@@ -1,7 +1,9 @@
 /* Para borrar los margenes del navegador */
 body{
     margin: 0;
+    padding: 0;
     overflow: hidden;
+    //background-color: aliceblue;
 }
 
 #nivel{
